# scriptkeeper

./: .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  build-docker-image.sh  build-docker-image.sh.protocols.yaml  build.rs  check-protocols-in-docker.sh  check-protocols-in-docker.sh.protocols.yaml  foo  poc.c  scriptkeeper-in-docker.sh  scriptkeeper-in-docker.sh.protocols.yaml  scriptkeeper-in-docker.sh.test.yaml  snapcraft.yaml  test-watch-in-docker.sh  var.output.txt
.circleci/: config.yml
distribution/: Dockerfile  build.sh  build.sh.test.yaml  release.sh  release.sh.test.yaml  smoke-test.sh
src/: c-tracing-poc.c  cli.rs  context.rs  emulation.rs  executable_mock.rs  executable_path.rs  lib.rs  main.rs  poc.c  recorder.rs  short_temp_files.rs  syscall_mocking.rs  tracee_memory.rs  utils.rs
src/emulation/: executable_mock.rs  mod.rs
src/protocol/: argument.rs  argument_parser.rs  command.rs  command_matcher.rs  executable_path.rs  marker.rs  mod.rs  yaml.rs
src/protocol_checker/: checker_result.rs  executable_mock.rs  mod.rs  test_result.rs
src/recorder/: hole_recorder.rs  mod.rs  protocol_result.rs  result.rs
src/syscall_mock/: executable_mock.rs  mod.rs  test_result.rs
src/syscall_mocking/: debugging.rs  mod.rs  tracee_memory.rs
src/test_checker/: checker_result.rs  executable_mock.rs  mod.rs
src/test_spec/: argument_parser.rs  command.rs  executable_path.rs  mod.rs  yaml.rs
src/tracer/: debugging.rs  directory_entry.rs  mod.rs  stdio_redirecting.rs  syscall.rs  tracee_memory.rs
src/utils/: mod.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
tests/: examples.rs  files.rs  holes.rs  more_stderr.rs.not  path.rs  recording.rs  run.rs  slow.rs  stderr.rs  stdio.rs  utils.rs
tests/arguments/: expected  script
(+31 files in other folders)
