[package]
name = "scriptkeeper"
version = "0.1.0"
authors = ["soenkehahn <SoenkeHahn@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[[bin]]
name = "scriptkeeper"
path = "src/main.rs"

[dependencies]
nix = "*"
libc = "*"
tempdir = "*"
yaml-rust = { git = "https://github.com/originate/yaml-rust", rev = "5216abe1f7d24ccd17a3b1b1e56c0114758d5ed7" }
linked-hash-map = "*"
bincode = "*"
quale = "*"
serde_derive = "*"
serde = "*"
memoffset = "*"
clap = "*"
regex = "*"

[build-dependencies]
trim-margin = "*"

[dev-dependencies]
test-utils = { path = "test-utils" }
pretty_assertions = "*"

[features]
dev = []
ci = []
test = []
