[package]
name = "scriptkeeper"
version = "0.2.1"
authors = ["soenkehahn <SoenkeHahn@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[[bin]]
name = "scriptkeeper"
path = "src/main.rs"

[dependencies]
nix = "*"
libc = "*"
tempdir = "*"
yaml-rust = "*"
linked-hash-map = "*"
bincode = "*"
quale = "*"
serde_derive = "*"
serde = "*"
trim-margin = "*"
memoffset = "*"
clap = "*"
regex = "*"
test-utils = { path = "test-utils" }

[dev-dependencies]
pretty_assertions = "*"

[features]
dev = []
ci = []
test = []
